--- a/index.html
+++ b/index.html
@@ -9,3 +9,17 @@
     <p>Це фан-сайт у стилі GitHub Pages :)</p>
   </body>
 </html>
+<head>
+  <meta charset="UTF-8" />
+  <title>Oketra House</title>
+  <style>
+    body {
+      /* Вказуємо шлях до зображення */
+      background-image: url('assets/images/bg.jpg');
+      background-repeat: no-repeat;      /* Не повторювати фон */
+      background-position: center center; /* Центруємо фон */
+      background-size: cover;            /* Масштабуємо фон, щоб він покривав весь екран */
+      background-attachment: fixed;      /* Фіксуємо фон при прокручуванні */
+    }
+  </style>
+</head>
