--- a/about.html
+++ b/about.html
@@ -1,10 +1,26 @@
+<!DOCTYPE html>
+<html lang="uk">
+  <head>
+    <meta charset="UTF-8">
+    <title>Про нас | Oketra House</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Головна</a></li>
+          <li><a href="about.html">Про нас</a></li>
+          <li><a href="news.html">Новини</a></li>
+          <li><a href="gallery.html">Галерея</a></li>
+          <li><a href="contact.html">Контакти</a></li>
+        </ul>
+      </nav>
+    </header>
 
-<nav>
-  <ul>
-    <li><a href="index.html">Головна</a></li>
-    <li><a href="about.html">Про нас</a></li>
-    <li><a href="news.html">Новини</a></li>
-    <li><a href="gallery.html">Галерея</a></li>
-    <li><a href="contact.html">Контакти</a></li>
-  </ul>
-</nav>
+    <section>
+      <h1>Про нас</h1>
+      <p>Тут буде інформація про групу, її історію та досягнення.</p>
+    </section>
+  </body>
+</html>
