--- a/about.html
+++ b/about.html
@@ -6,17 +6,17 @@
     <link rel="stylesheet" href="assets/css/styles.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="index.html">Головна</a></li>
-          <li><a href="about.html">Про нас</a></li>
-          <li><a href="news.html">Новини</a></li>
-          <li><a href="gallery.html">Галерея</a></li>
-          <li><a href="contact.html">Контакти</a></li>
-        </ul>
-      </nav>
-    </header>
+   
+<nav>
+  <ul>
+    <li><a href="index.html">Главная</a></li>
+    <li><a href="about.html">О нас</a></li>
+    <li><a href="news.html">Новости</a></li>
+    <li><a href="gallery.html">Галерея</a></li>
+    <li><a href="contact.html">Контакты</a></li>
+  </ul>
+</nav>
+
 
     <section>
       <h1>Про нас</h1>
