--- a/news.html
+++ b/news.html
@@ -1,10 +1,11 @@
 
+
 <nav>
   <ul>
-    <li><a href="index.html">Головна</a></li>
-    <li><a href="about.html">Про нас</a></li>
-    <li><a href="news.html">Новини</a></li>
+    <li><a href="index.html">Главная</a></li>
+    <li><a href="about.html">О нас</a></li>
+    <li><a href="news.html">Новости</a></li>
     <li><a href="gallery.html">Галерея</a></li>
-    <li><a href="contact.html">Контакти</a></li>
+    <li><a href="contact.html">Контакты</a></li>
   </ul>
 </nav>
