--- a/gallery.html
+++ b/gallery.html
@@ -1,3 +1,47 @@
+<head>
+  <meta charset="UTF-8" />
+  <title>Oketra House</title>
+  <style>
+    body {
+      background-image: url('assets/images/bg3.jpg');
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: cover;
+      background-attachment: fixed;
+      margin: 0; /* Видалити зайві відступи */
+      padding: 0; /* Видалити зайві відступи */
+    }
+
+    nav {
+      position: relative;
+      z-index: 10;
+      background-color: rgba(0, 0, 0, 0.5); /* Напівпрозорий фон для меню */
+      padding: 10px;
+    }
+
+    nav ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+    }
+
+    nav ul li {
+      margin: 0 15px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+    }
+
+    nav ul li a:hover {
+      color: #f39c12; /* Зміна кольору при наведенні */
+    }
+  </style>
+</head>
 
 <nav>
   <ul>
