--- a/roles.html
+++ b/roles.html
@@ -1,1 +1,14 @@
-
+<nav>
+  <ul class="menu">
+    <li><a href="index.html">Главная</a></li>
+    <li><a href="gallery.html">Галерея</a></li>
+     <!-- Випадаюче меню -->
+    <li class="dropdown">
+      <a href="#">Роли</a>
+      <ul class="dropdown-menu">
+        <li><a href="roles_new_gen.html">Роли Новое поколение</a></li>
+        <li><a href="roles_gods_game.html">Роли Игра бога</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
