--- a/index.html
+++ b/index.html
@@ -42,22 +42,13 @@
     }
   </style>
 </head>
-
 <nav>
-  <ul class="menu">
+  <ul>
     <li><a href="index.html">Главная</a></li>
+    <li><a href="roles.html">Роли</a></li>
     <li><a href="about.html">О нас</a></li>
     <li><a href="news.html">Новости</a></li>
     <li><a href="gallery.html">Галерея</a></li>
     <li><a href="contact.html">Контакты</a></li>
-    
-    <!-- Випадаюче меню -->
-    <li class="dropdown">
-      <a href="#">Роли</a>
-      <ul class="dropdown-menu">
-        <li><a href="roles_new_gen.html">Роли Новое поколение</a></li>
-        <li><a href="roles_gods_game.html">Роли Игра бога</a></li>
-      </ul>
-    </li>
   </ul>
 </nav>
