--- a/roles.html
+++ b/roles.html
@@ -1,3 +1,17 @@
+<head>
+  <meta charset="UTF-8" />
+  <title>Oketra House</title>
+  <style>
+    body {
+      background-image: url('assets/images/bg4.jpg');
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: cover;
+      background-attachment: fixed;
+      margin: 0; /* Видалити зайві відступи */
+      padding: 0; /* Видалити зайві відступи */
+    }
+
 <nav>
   <ul class="menu">
     <li><a href="index.html">Главная</a></li>
